Base de datos lista, un paso para subir a la red

--- a/posts/templates/ayuda.html
+++ b/posts/templates/ayuda.html
@@ -34,8 +34,9 @@
                     height="500"
                     alt="Flecha apuntando a un punto sobre el mapa"
                     title="Flecha apuntando a un punto sobre el mapa"></center>
-                <p style="text-align: justify;">Una vez que has marcado el punto, automáticamente en la barra
-                superior, donde se encuentra el enlace, se añadirán las coordenadas.</p>
+                <p style="text-align: justify;">Una vez que has marcado el punto, automáticamente 
+                aparecerá en la parte inferior un recuadro con las coordenadas del punto que has marcado.
+                </p>
 
                 <li>Copiar las coordenadas</li>
                 <center><img src="{% static 'img/obtener_coordenadas.jpg' %}"
@@ -56,14 +57,23 @@
                 una vez introducidos los datos del problema. Presiona en el botón que se encuentra en la parte
                 inferior izquierda para registrarlo en la base de datos.</p>
 
+                <li>Confirmación</li>
+                <center><img src="{% static 'img/mensaje_confirmacion.jpg' %}"
+                    width="700"
+                    height="500"
+                    alt="Mensaje de confirmación sobre el registro en la base de datos"
+                    title="Mensaje de confirmación sobre el registro en la base de datos"></center>
+                <p style="text-align: justify;">Una vez presionado el botón para registrar el problema, podrás 
+                visualizar un mensaje de confirmación.</p>
+
                 <li>Visualizar la información</li>
                 <center><img src="{% static 'img/mostrar_punto.jpg' %}"
                     width="700"
                     height="500"
                     alt="Icono de árbol sobre un mapa"
                     title="Icono de árbol sobre un mapa"></center>
-                <p style="text-align: justify;">Una vez que los datos han sido registrados, el problema aparecerá
-                en el Mapa de problemas.</p>
+                <p style="text-align: justify;">Ahora, el problema aparecerá
+                en el Mapa de problemas disponible para todos.</p>
 
             </ul>
 
@@ -71,7 +81,7 @@
                 Continuamos desarrollando la aplicación para que cada vez sea más cómoda para ti.</strong></p>
 
 
-            <p><center><h1>¡Hagamos que este proyecto crezca! &hearts;</h1></center></p>
+            <p><center><h1>Con mucho cariño, el equipo de WhyMex &hearts;</h1></center></p>
         </div>
 
         <div id="footer">&copy Todos los derechos reservados</div>
