correcion de ortografia

--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -6,7 +6,7 @@
     <!--¿Qué es WhyMex?-->
     <div id="container"> 
       <div id="post">
-        <p style="text-align: justify;">¡Hola! Bievenido, probablemente te preguntes...</p>
+        <p style="text-align: justify;">¡Hola! Bienvenido, probablemente te preguntes...</p>
         <center><h2><strong>¿Qué es WhyMex?</strong></h2></center>
         <p style=”text-align: justify;”>En México tenemos serios problemas
         con la biodiversidad a raíz de una pésima gestión, una regulación no 
