Implementación de API

--- a/posts/templates/base_generic.html
+++ b/posts/templates/base_generic.html
@@ -51,6 +51,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/dudas/"><i class="fas fa-map-marked-alt"></i>Ayuda</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/apiwm/"><i class="fas fa-map-marked-alt"></i>API</a>
+                    </li>
                 </ul>
             </div>
         </nav>
