--- a/posts/templates/mapa.html
+++ b/posts/templates/mapa.html
@@ -6,7 +6,7 @@
 {% endblock %} 
 
 {% block content %}
-    <div id="container">
+    <div id="containermap">
         {% load static %}
         {{ my_map|safe }}
     </div>
