--- a/posts/static/css/estilos.css
+++ b/posts/static/css/estilos.css
@@ -44,6 +44,17 @@
     margin: 0 auto;
 }
 
+#containermap
+{
+    width: 85%;
+    padding: 1em; 
+    text-align: left; 
+    border: 1px solid rgb(105, 105, 105);
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    margin: 0 auto;
+}
+
+
 #container h1
 {
     font-size: 20px;
