--- a/posts/templates/registro.html
+++ b/posts/templates/registro.html
@@ -19,17 +19,17 @@
             <form method="POST" action = "{% url 'registrar_problema' %}" class="row g-3">
                 {% csrf_token %}
                 <div class="col-md-6">
-                    <label for="inputLatitud" class="form-label">Latitud</label>
+                    <label for="inputLatitud" class="form-label">*Latitud</label>
                     <input type="number" step="0.000001" class="form-control" id="myLatitud"
                     placeholder="Latitud" name="latitud" required>
                 </div>
                 <div class="col-md-6">
-                    <label for="inputLongitud" class="form-label">Longitud</label>
+                    <label for="inputLongitud" class="form-label">*Longitud</label>
                     <input type="number" step="0.000001" class="form-control" id="myLongitud"
                     placeholder="Longitud" name="longitud" required>
                 </div>
                 <div class="col-12">
-                    <label for="inputProblema" class="form-label">Tipo de problema</label>
+                    <label for="inputProblema" class="form-label">*Tipo de problema</label>
                     <select id="myProblema" class="form-select" name="problema" required>
                         <!-- En la base de datos esto será almacenado como varchar -->
                         <option disabled="" selected="">Seleccionar problema</option>
@@ -43,10 +43,11 @@
                         <option value="Vertedero_clandestino">Vertedero realizado clandestinamente</option>
                         <option value="Desechos_toxicos">Desechos tóxicos tirados clandestinamente</option>
                         <option value="Desechos_biologicos">Desechos biológicos tirados clandestinamente</option>
+                        <option value="Otro">Otro (Añade información adicional)</option>
                     </select>
                 </div>
                 <div class="col-12">
-                    <label for="inputImportancia" class="form-label">Nivel de prioridad</label>
+                    <label for="inputImportancia" class="form-label">*Nivel de prioridad</label>
                     <select id="myImportancia" class="form-select" name="prioridad" required>
                         <option disabled="" selected="">Seleccionar nivel de prioridad</option>
                         <option value="Extremadamente_alta">Extremadamente Alta</option>
@@ -63,7 +64,7 @@
                     title="Si el nombre excede los 50 carácteres, introduce el nombre por el que se conoce localmente la ciudad">
                     </div>
                 <div class="col-md-4">
-                    <label for="inputEstado" class="form-label">Estado</label>
+                    <label for="inputEstado" class="form-label">*Estado</label>
                     <select id="myEstado" class="form-select" name="estado" required>
                         <option disabled="" selected="">Seleccionar estado</option>
                         <option value="MEX">Mexico</option>
@@ -108,6 +109,7 @@
                     <input type="text" class="form-control" id="myInformation"
                     placeholder="¿Información adicional? Introducela aquí" name="about">
                 </div>
+                <p style="color: red;">* Campos obligatorios</p>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">Registrar problema</button>
                 </div>
