--- a/posts/templates/registro.html
+++ b/posts/templates/registro.html
@@ -20,12 +20,12 @@
                 {% csrf_token %}
                 <div class="col-md-6">
                     <label for="inputLatitud" class="form-label"><a style="color: red;">*</a>Latitud</label>
-                    <input type="number" step="0.000001" class="form-control" id="myLatitud"
+                    <input type="number" step="0.0000001" class="form-control" id="myLatitud"
                     placeholder="Latitud" name="latitud" required>
                 </div>
                 <div class="col-md-6">
                     <label for="inputLongitud" class="form-label"><a style="color: red;">*</a>Longitud</label>
-                    <input type="number" step="0.000001" class="form-control" id="myLongitud"
+                    <input type="number" step="0.0000001" class="form-control" id="myLongitud"
                     placeholder="Longitud" name="longitud" required>
                 </div>
                 <div class="col-12">
