Algunas correcciones en las referencias

--- a/posts/templates/ayuda.html
+++ b/posts/templates/ayuda.html
@@ -7,7 +7,7 @@
     <!--Información de contacto-->
     <div id="container">
         <div id="post">
-            <center><h2><strong>¡Hola! Bienvenido a la sección de ayuda</strong></h2></center>
+            <center><h2><strong>Bienvenido a la sección de ayuda</strong></h2></center>
             <p style=”text-align: justify;”>Antes de enviarnos tu pregunta al correo en la sección de contácto, por favor
                 revisa las que ya están en la página. Aquí encontraras respuesta a las preguntas: <br>
             <ul>
