--- a/posts/templates/contacto.html
+++ b/posts/templates/contacto.html
@@ -7,7 +7,7 @@
     <!--Información de contacto-->
     <div id="container"> 
         <div id="post">
-            <center><h2><strong>¡Hola! Bienvenido</strong></h2></center>
+            <center><h2><strong>Bienvenido</strong></h2></center>
             <p style=”text-align: justify;”>Está página fue realizada para recolectar datos
                 de problemas sociales/ambientales en México con la finalidad de buscar y proponer
                 estrategias basadas en datos para darles una solución fundamentada en datos.
@@ -21,21 +21,22 @@
             <p><strong>¿Tienes alguna habilidad que crees que puede ayudar a crecer este proyecto?</strong>
                 <br>¡Colabora con nosotros!</p>
             <p><strong>¿Cómo lo hago?</strong>
-            <br>Puedes clonar el repositorio, hacer tu aporte modificando o editando algo de 
-            código y hacer un pull request, posteriormente el equipo lo revisará.</p>
+            <br>Si es en la parte de código, puedes clonar el repositorio, hacer tu aporte
+            editando algo de código y hacer un pull request, posteriormente el equipo lo revisará
+            y de pasar la revisión, será fusionado a la rama principal.
+            <br>
+            Si no es en la parte de código, por favor contáctame por mi correo personal:
+            <strong>ladivcr@comunidad.unam.mx</strong></p>
             <p><a href="https://github.com/Ladivcr/WhyMex">Repositorio del proyecto</a></p>
 
             <p><strong>¿El repositorio no está disponible?</strong>
                 <br>Tal vez está oculto por algunas cuestiones. Pero no te preocupes,
                 si tienes muchas ganas de colaborar, por favor escríbeme a mi correo
-                personal: <strong>vidalecardano@yahoo.com</strong> 
-                para conversar un poco sobre tu perfil y la razón por la cual quieres colaborar
-                y así añadirte al equipo y en el proyecto.
+                personal para conversar un poco sobre tu perfil y la razón por la cual quieres
+                colaborar y así añadirte en el repositorio del proyecto.
             </p>
-            <p><center><h1>¡Hagamos que este proyecto crezca! &hearts;</h1></center></p>
+            <div id="footer"><center><h1>¡Un proyecto para la comunidad! &hearts;</h1></center></div>
         </div>
-
-        <div id="footer">&copy Todos los derechos reservados</div>
     </div>
     <!-- TERMINA Información de contacto-->
 {% endblock %}
