--- a/posts/templates/mapa.html
+++ b/posts/templates/mapa.html
@@ -9,5 +9,6 @@
     <div id="containermap">
         {% load static %}
         {{ my_map|safe }}
+    <!-- <div id="footer">&copy Todos los derechos reservados</div> -->
     </div>
 {% endblock %}
