--- a/posts/templates/base_generic.html
+++ b/posts/templates/base_generic.html
@@ -54,29 +54,29 @@
         <div class=”container”>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/inicio/"><strong>WhyMex!</strong></a>
+            <a class="navbar-brand" href="{% url 'inicio' %}"><strong>WhyMex!</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/inicio/"><i class="fa fa-home" aria-hidden="true"></i><strong>Inicio</strong></a>
+                        <a class="nav-link" href="{% url 'inicio' %}"><i class="fa fa-home" aria-hidden="true"></i><strong>Inicio</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/mapa/"><i class="fas fa-map-marked-alt"></i><strong>Mapa de problemas</strong></a>
+                        <a class="nav-link" href="{% url 'mostrar_mapa' %}"><i class="fas fa-map-marked-alt"></i><strong>Mapa de problemas</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/registro/"><i class="fas fa-users"></i><strong>Registrar nuevo problema</strong></a>
+                        <a class="nav-link" href="{% url 'registrar_problema' %}"><i class="fas fa-users"></i><strong>Registrar nuevo problema</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contacto/"><i class="far fa-comment-alt"></i><strong>Contácto</strong></a>
+                        <a class="nav-link" href="{% url 'contacto' %}"><i class="far fa-comment-alt"></i><strong>Contácto</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/dudas/"><i class="fas fa-map-marked-alt"></i><strong>Ayuda</strong></a>
+                        <a class="nav-link" href="{% url 'ayuda' %}"><i class="fas fa-map-marked-alt"></i><strong>Ayuda</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/apiwm/"><i class="fas fa-map-marked-alt"></i><strong>API</strong></a>
+                        <a class="nav-link" href="{% url 'APIwm' %}"><i class="fas fa-map-marked-alt"></i><strong>API</strong></a>
                     </li>
                 </ul>
             </div>
