--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -6,7 +6,7 @@
     <!--¿Qué es WhyMex?-->
     <div id="container"> 
       <div id="post">
-        <p style="text-align: justify;">¡Hola! Bievenido, probablemente te preguntes...</p>
+        <p>¡Hola! Bievenido, probablemente te preguntes...</p>
         <center><h2><strong>¿Qué es WhyMex?</strong></h2></center>
         <p style=”text-align: justify;”>En México tenemos serios problemas
         con la biodiversidad a raíz de una pésima gestión, una regulación no 
@@ -38,27 +38,7 @@
           ¿<strong>por qué México</strong> tiene mucha biodiversidad pero pésima gestión y regulación? Etc.
         </p>
       </div>
-      <div id="footer">Hecho con mucho amor y django</div>
+      <div id="footer"><center><h1>Hecho con mucho amor y django &hearts;</h1></center></div>
     </div>
     <!-- TERMINA ¿Qué es WhyMex?-->
-    <!--
-    <br><br>
-    <div class="container">
-        <div class="row">
-            {% for post in posts %}
-            <div class="col-lg-4 offset-lg-4">
-                <div class="media">
-                    <img class="mr-3 rounded-circle" src="{{ post.user.picture }}" alt="{{post.user.name}}">
-                    <div class="media-body">
-                        <h5 class="mt-0">{{post.user.name}}</h5>
-                        {{ post.timestamp }}
-                    </div>
-                </div>
-                <img class="img-fluid mt-3 border rounded" src="{{ post.photo }}" alt="{{ post.title }}">
-                <h6 class="ml-1 mt-1">{{ post.title }}</h6>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-    -->
 {% endblock %}
