Apertura en nueva pestaña de los datos

--- a/posts/templates/base_generic.html
+++ b/posts/templates/base_generic.html
@@ -76,7 +76,7 @@
                         <a class="nav-link" href="{% url 'ayuda' %}"><i class="fas fa-map-marked-alt"></i><strong>Ayuda</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'APIwm' %}"><i class="fas fa-map-marked-alt"></i><strong>API</strong></a>
+                        <a class="nav-link" href="{% url 'APIwm' %}" target="_blank"><i class="fas fa-map-marked-alt"></i><strong>API</strong></a>
                     </li>
                 </ul>
             </div>
