--- a/posts/static/css/estilos.css
+++ b/posts/static/css/estilos.css
@@ -47,6 +47,7 @@
 #containermap
 {
     width: 95%;
+    height: 700px;
     padding: 1em; 
     text-align: left; 
     border: 1px solid rgb(105, 105, 105);
